# eslint-plugin-import-swc

./: Cargo.toml  package.json
.cargo/: config
fixtures/input/: test_file.tsx
fixtures/output/: test_file.tsx
src/: lib.rs
test/: plugin_tests.rs
